@@ -1,3 +1,10 @@
+2012-07-07 12:48  paddockd
+
+	* [r363] ChangeLog, src/slimaudio/slimaudio_output.c,
+	  src/squeezeslave/squeezeslave.c: Portmixer debug messages
+	  cleanup.
+	  Increased revision to 363.
+
 2012-07-07 12:36  paddockd
 
 	* [r362] ChangeLog, src/slimaudio/slimaudio.h,
